Accept multipart/form-data post to /job/{jobId}/input/{dataset}
This is a progress commit.

Refs #64736